internal-services/deploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: virtuoso-internal
  namespace: ndc-dev
  labels:
    application: virtuoso-internal
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentConfig: virtuoso-internal
  template:
    metadata:
      name: virtuoso-internal
      creationTimestamp: null
      labels:
        application: virtuoso-internal
        deploymentConfig: virtuoso-internal
    spec:
      containers:
        - resources:
            limits:
              cpu: 800m
              memory: 4048Mi
            requests:
              cpu: 250m
              memory: 512Mi
          # readinessProbe:  # FIXME
          #   httpGet:
          #     path: /
          #     port: 8080
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   timeoutSeconds: 2
          #   periodSeconds: 8
          #   successThreshold: 1
          #   failureThreshold: 300
          # livenessProbe: # FIXME
          #   httpGet:
          #     path: /
          #     port: 8080
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   timeoutSeconds: 2
          #   periodSeconds: 8
          #   successThreshold: 1
          #   failureThreshold: 300
          terminationMessagePath: /dev/termination-log
          name: virtuoso-internal
          ports:
            - name: http
              containerPort: 8890
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: >-
            docker.io/openlink/virtuoso-opensource-7:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
