internal-services/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: virtuoso-internal
  namespace: ndc-dev
  labels:
    application: virtuoso-internal
spec:
  host: sparql.cloudpub.testedev.istat.it
  to:
    kind: Service
    name: virtuoso-internal
    weight: 100
  port:
    targetPort: 8890
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
